# links-game

./: .gitignore  Dockerfile  README.md  app.conf  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: docker_build.yaml
backend/: .env.template  .gitignore  Cargo.toml
backend/migrations/: 20250511001312_create_items_table.sql
backend/postman/: GameEncodingStore.postman_collection.json
backend/src/: game_encoder.rs  main.rs
custom-connections/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
custom-connections/src/: App.tsx  Layout.tsx  main.tsx
custom-connections/src/assets/styles/: Creator.scss  Game.scss  Grid.scss  GroupedButtons.scss  Tile.scss  common.scss
custom-connections/src/components/: CreatorGrid.tsx  GameGrid.tsx  Grid.tsx  GroupedButtons.tsx  Tile.tsx
custom-connections/src/hooks/: useEditor.ts  useGame.ts  useGameEditor.ts
custom-connections/src/pages/: Creator.tsx  Game.tsx  NotFound.tsx
custom-connections/src/utils/: commonTypes.ts  utils.ts
examples/: example.json
src/: App.tsx  Layout.tsx  main.tsx
src/assets/styles/: Creator.scss  Game.scss  Grid.scss  GroupedButtons.scss  NotFound.scss  Tile.scss
src/components/: CreatorGrid.tsx  GameGrid.tsx  GroupedButtons.tsx  Tile.tsx
src/constants/: environment.ts
src/hooks/: useEditor.ts  useFitText.ts  useGame.ts
src/pages/: Creator.tsx  Game.tsx  NotFound.tsx
src/utils/: utils.ts
