[package]
name = "links-game-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
